add_library(Assets SHARED Assets.cpp)
add_library(Model SHARED Model.cpp)
add_library(Render SHARED Render.cpp)
add_library(Controller SHARED Controller.cpp)
add_library(Composite SHARED Composite.cpp)
add_library(Unit SHARED Unit.cpp)
add_library(UnitFactory SHARED UnitFactory.cpp)
add_library(Color SHARED Color.cpp)
add_library(UnitTexture SHARED UnitTexture.cpp)
add_library(Graphics SHARED Graphics.cpp)